--- a/FedoraPhoto/FedoraPhoto/Web.config
+++ b/FedoraPhoto/FedoraPhoto/Web.config
@@ -56,5 +56,10 @@
     <add name="Model1" connectionString="data source=ed4sql2;initial catalog=H15_PROJET_E07;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="Model2" connectionString="data source=ed4sql2;initial catalog=H15_PROJET_E07;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="Model11" connectionString="data source=ed4sql2;initial catalog=H15_PROJET_E07;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Model21" connectionString="data source=ed4sql2;initial catalog=H15_PROJET_E07;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Model12" connectionString="data source=ed4sql2;initial catalog=H15_PROJET_E07;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Model13" connectionString="data source=ed4sql2;initial catalog=H15_PROJET_E07;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Model14" connectionString="data source=ed4sql2;initial catalog=H15_PROJET_E07;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Model15" connectionString="data source=ed4sql2;initial catalog=H15_PROJET_E07;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
