--- a/FedoraPhoto/FedoraPhoto/Web.config
+++ b/FedoraPhoto/FedoraPhoto/Web.config
@@ -61,5 +61,7 @@
     <add name="Model13" connectionString="data source=ed4sql2;initial catalog=H15_PROJET_E07;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="Model14" connectionString="data source=ed4sql2;initial catalog=H15_PROJET_E07;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="Model15" connectionString="data source=ed4sql2;initial catalog=H15_PROJET_E07;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Model22" connectionString="data source=ed4sql2;initial catalog=H15_PROJET_E07;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Model16" connectionString="data source=ed4sql2;initial catalog=H15_PROJET_E07;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
