--- a/FedoraPhoto/FedoraPhoto/FedoraPhoto.csproj
+++ b/FedoraPhoto/FedoraPhoto/FedoraPhoto.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Models\Model1.cs" />
     <Compile Include="Models\Photo.cs" />
     <Compile Include="Models\Photographe.cs" />
+    <Compile Include="Models\PhotoMetadata.cs" />
     <Compile Include="Models\Seance.cs" />
     <Compile Include="Models\SeanceMetadata.cs" />
     <Compile Include="Models\Telephone.cs" />
