--- a/FedoraPhoto/FedoraPhoto/FedoraPhoto.csproj
+++ b/FedoraPhoto/FedoraPhoto/FedoraPhoto.csproj
@@ -133,13 +133,16 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Agent.cs" />
+    <Compile Include="Models\Forfait.cs" />
     <Compile Include="Models\Model1.cs" />
     <Compile Include="Models\Photo.cs" />
     <Compile Include="Models\Photographe.cs" />
     <Compile Include="Models\PhotoMetadata.cs" />
     <Compile Include="Models\Seance.cs" />
     <Compile Include="Models\SeanceMetadata.cs" />
+    <Compile Include="Models\sysdiagram.cs" />
     <Compile Include="Models\Telephone.cs" />
+    <Compile Include="Models\uvwInfoSeance.cs" />
     <Compile Include="Models\ValidateDateSeance.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
