--- a/FedoraPhoto/FedoraPhoto/Web.config
+++ b/FedoraPhoto/FedoraPhoto/Web.config
@@ -65,5 +65,6 @@
     <add name="Model16" connectionString="data source=ed4sql2;initial catalog=H15_PROJET_E07;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="Model17" connectionString="data source=ed4sql2;initial catalog=H15_PROJET_E07;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="Model18" connectionString="data source=ed4sql2;initial catalog=H15_PROJET_E07;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Model19" connectionString="data source=ed4sql2;initial catalog=H15_PROJET_E07;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
