--- a/FedoraPhoto/FedoraPhoto/FedoraPhoto.csproj
+++ b/FedoraPhoto/FedoraPhoto/FedoraPhoto.csproj
@@ -146,6 +146,7 @@
     </Compile>
     <Compile Include="Models\Agent.cs" />
     <Compile Include="Models\Dowloader.cs" />
+    <Compile Include="Models\Facture.cs" />
     <Compile Include="Models\Forfait.cs" />
     <Compile Include="Models\Model1.cs" />
     <Compile Include="Models\Photo.cs" />
@@ -222,6 +223,7 @@
     <Content Include="Views\Photos\Details.cshtml" />
     <Content Include="Views\Photos\Edit.cshtml" />
     <Content Include="Views\Photos\Index.cshtml" />
+    <Content Include="Views\Shared\_GaleriePhotoView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
