--- a/FedoraPhoto/FedoraPhoto/Web.config
+++ b/FedoraPhoto/FedoraPhoto/Web.config
@@ -56,5 +56,6 @@
     <add name="Model19" connectionString="data source=ed4sql2;initial catalog=H15_PROJET_E07;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="Model1" connectionString="data source=ed4sql2;initial catalog=H15_PROJET_E07;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="Model11" connectionString="data source=ed4sql2;initial catalog=H15_PROJET_E07;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Model12" connectionString="data source=ed4sql2;initial catalog=H15_PROJET_E07;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
